[package]
name = "neuros"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11"
x86_64 = "0.14"
spin = "0.10.0"  # ✅ Добавляем этот крейт
pic8259 = "0.10"

[build-dependencies]
bootloader = "0.11"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootloader]
disk-image-type = "bios"        # или "uefi"
create-disk-image = true        # создать boot-image.bin
map-physical-memory = true